--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "dat.gui": "^0.7.9"
+        "dat.gui": "^0.7.9",
+        "prettier": "^3.0.3"
     },
     "devDependencies": {
+        "eslint": "^8.52.0",
+        "eslint-config-prettier": "^9.0.0",
         "vite": "^2.7.2"
     }
 }
